<resources>
    <string name="app_name">ExpenseTrackerJavaGroovy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Expenses Tracker</string>
    <string name="nav_header_subtitle">Track my monthly expenses</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>

    <string name="menu_home">Home</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_about">About</string>

    <string name="expense_enter_amount">Enter Amount</string>
    <string name="expense_enter_description">Description</string>
    <string name="expense_enter_type">Type</string>
    <string name="add_expense_button">Add</string>
    <string name="date_format_hint">Select Date...</string>
    <string name="total_expenses_description">Total Expenses: </string>

    <string name="edit_expense_enter_amount">Edit Amount</string>
    <string name="edit_expense_enter_description">Edit Description</string>
    <string name="edit_expense_enter_type">Edit Type</string>
    <string name="edit_add_expense_button">Edit</string>
    <string name="edit_date_format_hint">DDMMYYYY</string>

    <string name="expense_description">Description: </string>
    <string name="expense_amount">Amount: </string>
    <string name="expense_type">Type: : </string>
    <string name="expense_date">Date: : </string>

    <string-array name="expense_type_spinner">
        <item>Food</item>
        <item>Transportation</item>
        <item>Others</item>
    </string-array>
</resources>