<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<!--    tools:context=".ui.home.HomeFragment"-->


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_data_expense_amount"
            android:layout_width="295dp"
            android:layout_height="79dp"
            android:ems="10"
            android:hint="@string/edit_expense_enter_amount"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_data_expense_description"
            android:layout_width="295dp"
            android:layout_height="79dp"
            android:ems="10"
            android:hint="@string/edit_expense_enter_description"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_data_expense_type"
            android:layout_width="295dp"
            android:layout_height="79dp"
            android:ems="10"
            android:hint="@string/edit_expense_enter_type"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_data_expense_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_date_format_hint"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/edit_expense_button"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_marginBottom="320dp"
            android:backgroundTint="@color/joe_color"
            android:backgroundTintMode="src_atop"
            android:text="@string/edit_add_expense_button" />
    </LinearLayout>
</LinearLayout>