<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginTop="10dp">

    <ImageView
        android:id="@+id/expenseListLogo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/dollar_logo"
        android:layout_marginEnd="16dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/expenseListLogo"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/expenseAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expense_amount"
            android:textColor="@color/black"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/expenseDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expense_description"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/expenseType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expense_type"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/expenseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expense_date"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="4dp"/>

        <Button
            android:id="@+id/editDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:backgroundTint="@color/joe_color"
            android:textColor="@android:color/white"
            android:layout_below="@id/expenseDate"
            android:layout_alignStart="@id/expenseAmount"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0E0E0"
            android:layout_below="@id/editDataButton"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

</RelativeLayout>
