<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/text_total_expenses_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_expenses_description"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/text_total_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TEXT"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/dollar_logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/dollar_logo"
            android:layout_marginEnd="12dp"/>

        <EditText
            android:id="@+id/edit_text_expense_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/expense_enter_amount"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/question_mark_logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/question_mark_logo"
            android:layout_marginEnd="12dp"/>

        <EditText
            android:id="@+id/edit_text_expense_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/expense_enter_description"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/option_logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/option_logo"
            android:layout_marginEnd="12dp"/>

        <Spinner
            android:id="@+id/expense_type_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/calendar_logo"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/calendar_logo"
            android:layout_marginEnd="12dp"
            android:padding="3dp"/>

        <TextView
            android:id="@+id/edit_text_expense_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/date_format_hint"
            android:inputType="date"
            android:textSize="18sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_expense_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_expense_button"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/joe_color"/>

</LinearLayout>
